# hetzner-private-dns-sync

./: LICENSE  README.md  flake.nix
hetzner-private-dns-sync/: Cargo.toml
hetzner-private-dns-sync/src/: main.rs
